<resources>
    <string name="app_name">Medicalife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="welcome_login">Selamat Datang di Medicalife, \nSilahkan masuk untuk melanjutkan</string>
    <string name="welcome_daftar">Selamat Datang di Medicalife\nDaftarkan diri Anda dan nikmati semua fiturnya</string>
    <string name="nama">Nama</string>
    <string name="login_google">Masuk dengan Google</string>
    <string name="chart">Chart</string>
    <string name="rules">Aturan Pemakaian</string>
    <string name="desc">Deskripsi</string>
    <string name="no_results">Barang yang anda cari tidak ditemukan</string>

    <string-array name="name_artikel">
        <item>Menerapkan Gaya Hidup Sehat: Kunci untuk Kesehatan yang Optimal</item>
        <item>Strategi Pengelolaan Stres: Menjaga Kesehatan Mental di Era Modern</item>
        <item>Mengatasi Masalah Tidur: Pentingnya Istirahat yang Cukup bagi Kesehatan</item>
        <item>Strategi Pengelolaan Stres: Menjaga Kesehatan Mental di Era Modern</item>
        <item>Menerapkan Gaya Hidup Sehat: Kunci untuk Kesehatan yang Optimal</item>
    </string-array>

    <!--    ini desk artikel-->
    <string-array name="desk_artikel">
        <item>Gaya hidup sehat bukan sekadar tren atau kata-kata kosong, melainkan suatu komitmen untuk merawat tubuh dan pikiran kita agar tetap sehat dan bugar. Memiliki gaya hidup sehat berdampak positif pada kualitas hidup secara keseluruhan dan dapat mencegah berbagai penyakit kronis.
beberapa langkah praktis yang dapat kita lakukan untuk menerapkan gaya hidup sehat dan mencapai kesehatan yang optimal :
1.	Pemilihan Pola Makan yang Seimbang
2.	Rutin Berolahraga
3.	Mengelola Stres
4.	Menghindari Kebiasaan Merokok dan Mengonsumsi Alkohol secara Berlebihan
5.	Memprioritaskan Kesehatan Mental
</item>
        <item>Makanan adalah sumber energi dan nutrisi yang penting bagi tubuh kita. Memilih makanan sehat merupakan langkah kunci dalam menjaga keseimbangan gizi dan mendukung kesehatan tubuh secara keseluruhan. kita akan menjelajahi beberapa jenis makanan sehat yang dapat membantu kita mencapai keseimbangan gizi yang optimal dan menjaga kesehatan tubuh.
1.	Sayuran dan Buah-Buahan Segar
2.	Biji-bijian dan Sereal Utuh:
3.	Protein Sehat
4.	Lemak Sehat
5.	Air Putih
</item>
        <item>Kehidupan modern seringkali penuh dengan tekanan dan tuntutan yang dapat menimbulkan stres yang berdampak negatif pada kesehatan mental dan fisik kita. Oleh karena itu, penting bagi kita untuk memiliki strategi pengelolaan stres yang efektif guna menjaga kesehatan mental di era modern ini. Dalam artikel ini, kita akan membahas beberapa strategi yang dapat membantu kita mengatasi stres dan menjaga kesehatan mental.
1.	Olahraga dan Aktivitas Fisik
2.	Teknik Relaksi
3.	Manajemen Waktu
4.	Membangun Dukungan Sosisal
5.	Menjaga Keseimbangan Hidup
6.	Perhatikan Diri Sendiri
</item>
        <item>Tidur yang cukup dan berkualitas merupakan bagian penting dalam menjaga kesehatan dan kesejahteraan kita. Namun, banyak orang mengalami masalah tidur yang dapat memengaruhi kualitas hidup mereka. Dalam artikel ini, kita akan membahas mengenai pentingnya istirahat yang cukup bagi kesehatan serta memberikan beberapa tips untuk mengatasi masalah tidur
Berikut adalah beberapa tips untuk mengatasi masalah tidur:
1.	Rutinkan Waktu Tidur
2.	Ciptakan Lingkungan Tidur yang Nyaman:
3.	Batasi Paparan Cahaya Biru
4.	Hindari Konsumen Kafein dan Makanan Berat
5.	Hindari Tidur Siang Yang Telalu Lama
</item>
        <item>Kehidupan modern sering kali dipenuhi dengan tekanan dan tuntutan yang dapat menyebabkan stres yang berdampak negatif pada kesehatan mental kita. Namun, dengan adanya strategi pengelolaan stres yang efektif, kita dapat menjaga kesehatan mental kita di tengah-tengah kehidupan yang sibuk ini. Dalam artikel ini, menjelajahi beberapa strategi yang dapat membantu kita mengatasi stres dan menjaga kesehatan mental di era modern.
1.	Kesadaran Diri
2.	Olahraga dan Aktivitas Fisik:
3.	Manajemen Waktu:
4.	Hobi dan Kegiatan yang Menyenangkan
5.	Dukungan Sosial
</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/buah</item>
        <item>@drawable/sehta</item>
        <item>@drawable/sleep</item>
        <item>@drawable/stress</item>
        <item>@drawable/vitamin_c</item>
    </integer-array>
    <string name="title_activity_detail_article">DetailArticleActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>